# STREUSEL

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py  setup_chkpt.py
examples/: calc_vols.py  run_em.py
fix-optimized-method/: curl2cube.py  fix_optimized_method.py  verify_gaussian_implementation.py
master/: gaussian_cube.py  geometry_manipulation_functions.py  process_functions.py  vasp_object.py
streusel/: __init__.py  gaussian_cube.py  geometry_manipulation_functions.py  math_functions.py  process_functions.py  vasp_object.py
tests/: test_gaussian_implementation.py  test_optimized_method.py  write_cube.py
